# kompreshar

./: .gitignore  ALGORITHM.md  CMakeLists.txt  README.md
include/kompreshar/: KP_Compressor.hpp  KP_Window.hpp
src/: KPCompressor.cpp  KPCompressor.hpp  KPWindow.cpp  KPWindow.hpp  KP_Compressor.cpp  KP_Window.cpp  compile.sh  kompreshar  main.cpp
